--- a/VISION POR COMPUTADORA/TAREA 4/CODIGO/CODIGO LIMPIO/Operador de Sobel Julia.ipynb
+++ b/VISION POR COMPUTADORA/TAREA 4/CODIGO/CODIGO LIMPIO/Operador de Sobel Julia.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "c16927ff-8bb1-4c28-9c9d-3df2db44138d",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "imsobel (generic function with 1 method)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,14 +110,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "4becca7b-a08d-43c3-80f4-555206cc1522",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Gray{Float64}[0.5294117647058824 0.5294117647058824 … 0.5294117647058824 0.5294117647058824; 0.5294117647058824 0.5294117647058824 … 0.5294117647058824 0.5294117647058824; … ; 0.5294117647058824 0.5294117647058824 … 0.5294117647058824 0.5294117647058824; 0.5294117647058824 0.5294117647058824 … 0.5294117647058824 0.5294117647058824], Gray{Float64}[0.40378289473684215 0.40378289473684215 … 0.40378289473684215 0.40378289473684215; 0.40378289473684215 0.40378289473684215 … 0.40378289473684215 0.40378289473684215; … ; 0.40378289473684215 0.40378289473684215 … 0.40378289473684215 0.40378289473684215; 0.40378289473684215 0.40378289473684215 … 0.40378289473684215 0.40378289473684215], Gray{Float64}[1.0 1.0 … 1.0 1.0; 1.0 1.0 … 1.0 1.0; … ; 1.0 1.0 … 1.0 1.0; 1.0 1.0 … 1.0 1.0], Gray{Float64}[0.5 0.5 … 0.5 0.5; 0.5 0.5 … 0.5 0.5; … ; 0.5 0.5 … 0.5 0.5; 0.5 0.5 … 0.5 0.5])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Ejemplo de uso\n",
+    "ruta = \"CM1.jpg\"\n",
+    "q1, q2, q3, q4 = imsobel(ruta)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "429815d4-64e8-4cd8-843e-2da8405aa469",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e1e705dd-7af8-44c3-9027-7a85ccdb31f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ejemplo de uso\n",
-    "ruta = \"Fig3.45(a).jpg\"\n",
-    "q1, q2, q3, q4 = imsobel(ruta)\n",
     "# Puedes guardar las imágenes o mostrarlas usando imshow\n",
     "save(\"q11.png\", q1)\n",
     "save(\"q21.png\", q2)\n",
@@ -128,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.3",
+   "display_name": "Julia 1.11.4",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -136,7 +164,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.3"
+   "version": "1.11.4"
   }
  },
  "nbformat": 4,
