--- a/RERESENTACION DEL CONOCIMIENTO/TAREA 1/REPORTE/tarea1.tex
+++ b/RERESENTACION DEL CONOCIMIENTO/TAREA 1/REPORTE/tarea1.tex
@@ -1,3 +1,4 @@
+% !TeX document-id = {245b325f-dc16-420d-a87e-96cd7a1fdc3b}
 % !TeX TXS-program:compile = txs:///pdflatex/[--shell-escape]
 
 \documentclass[11pt, letterpaper]{article}
