--- a/VISION POR COMPUTADORA/TAREA 5/REPORTE/Biblio.bib
+++ b/VISION POR COMPUTADORA/TAREA 5/REPORTE/Biblio.bib
@@ -1,24 +1,8 @@
-@book{gonzalez2018digital,
-  title     = {Digital Image Processing},
-  author    = {Gonzalez, Rafael C. and Woods, Richard E.},
-  year      = {2018},
+@book{johnson2007,
+  title     = {Applied Multivariate Statistical Analysis},
+  author    = {Johnson, Richard A. and Wichern, Dean W.},
+  year      = {2007},
+  edition   = {6th},
   publisher = {Pearson},
-}
-
-@misc{perez2018procesamiento,
-  author = {Pérez, P. and Valente, M.},
-  title = {Procesamiento de imágenes con derivadas - Detección de esquinas y bordes},
-  year = {2018},
-  url = {https://www.famaf.unc.edu.ar/~pperez1/manuales/cim/cap4.html},
-  note = {Accedido: 19 de marzo de 2025},
-}
-
-
-@inproceedings{depaoli2012,
-  author    = {Depaoli, R. and Fernández, L. A. and Diaz, D.},
-  title     = {Optimización de la ecualización del histograma en el procesamiento de imágenes digitales},
-  booktitle = {Trabajo presentado en VII Workshop de Investigadores en Ciencias de la Computación},
-  pages     = {238--242},
-  year      = {2012},
-  address   = {Pcia. de Bs. As.}
+  address   = {Upper Saddle River, NJ}
 }
