--- a/VISION POR COMPUTADORA/TAREA 5/REPORTE/TAREA5.tex
+++ b/VISION POR COMPUTADORA/TAREA 5/REPORTE/TAREA5.tex
@@ -36,7 +36,7 @@
 		\vspace{3cm}
 		{\LARGE \bfseries Visión por Computadora \par}
 		\vspace{1cm}
-		{\Large \bfseries Tarea 5. Aplicación de PCA a la base de datos de penguin palmer en MATLAB. \par}
+		{\Large \bfseries Tarea 5. Aplicación de PCA a la base de datos de pingüinos palmer en MATLAB. \par}
 		\vfill
 		{\Large \textit{Ángel García Báez}\par}
 		\vspace{1cm}
@@ -53,7 +53,7 @@
 % Sección para el problema 1
 \section{Objetivo de la práctica}
 	
-Se tiene la base de datos de Penguin Palmers, la cual representa las mediciones de 3 especies de pinguinos en distintas islas, a lo largo de distintos años, la cual tiene la siguiente estructura:
+Se tiene la base de datos de pingüinos palmer, la cual representa las mediciones de 3 especies de pingüinos en distintas islas, a lo largo de distintos años, la cual tiene la siguiente estructura:
 
 
 
@@ -63,7 +63,7 @@ Se tiene la base de datos de Penguin Palmers, la cual representa las mediciones 
 	\begin{minipage}{1\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{IMG/T1.png}
-		\caption{Base de datos de los palmer penguins (primeros 5 casos)}
+		\caption{Base de datos de los pingüinos palmer (primeros 5 casos)}
 		\label{fig:f1}
 	\end{minipage}\hfill
 \end{figure}
@@ -105,221 +105,251 @@ Por otro lado, se hizo la propuesta de modelarlos en 3 dimensiones, para observa
 \end{figure}
 
 
+En el primer gráfico se logra apreciar una separación distinguible entre los grupos de pingüinos dada su visualización mediante las variables de profundidad del pico, longitud del pico y longitud de la aleta. Por otro lado, en el gráfico de la derecha, se observa como un grupo esta perfectamente diferenciado del resto pero los 2 grupos restantes se encuentran sobre puestos uno con el otro, lo que los hace difíciles de separar usando las variables de profundidad del pico, largo de la aleta y masa corporal.
 
-
-
-
+Es por ello que se quiere usar PCA para comprimir la información y reducir la dimensionalidad de los datos para proyectarlos en un espacio de menor dimensión y observar mejor su comportamiento en 2 y 3 dimensiones.
 
 	
 	\newpage
 	
 	\section{Metodología}
 	
-	Para la correcta implementación del operador de Sobel es necesario definirlo en sus componentes más básicas, por lo que se recurrió al uso de las definiciones que vienen \cite{gonzalez2018digital}:
+	Para realizar el calculo del PCA es necesario desglosarlo en varios pasos. Primero, cabe mencionar que el PCA es una técnica multivariada de aprendizaje no supervisado que permite reducir la dimensionalidad de datos cuantitativos continuos al proyectar la información en un nuevo espacio de variables incorrelacionadas sin perder apenas información en la transformación como se explica en el libro de \cite{johnson2007}. 
 	
-	El gradiente (primera derivada) de la una imagen, puede ser visto como una derivada bidimensional que tiene la siguiente forma:
-	
-	$$\nabla f \equiv \text{grad}(f) = \begin{bmatrix} g_x \\ g_y \end{bmatrix} = \begin{bmatrix} \frac{\partial f}{\partial x} \\ \frac{\partial f}{\partial y} \end{bmatrix}$$
-	
-	Se observa que para la construcción del gradiente $\nabla f$ se necesitan obtener los correspondientes $g_x$ y $g_y$ que corresponden a las derivadas parciales en $x$ y en $y$.
-	
-	Dado que los pixeles en una imagen no siguen el comportamiento de una función continua como tal, bajo ciertos arreglos y simplificaciones de muestreos locales, se puede construir un operador que calcula la derivada localmente mediante una mascara de 3x3 para la región que esta siendo muestreada bajo la siguiente estructura:
+	Para ejecutar la técnica, se sugiere primero obtener el vector de medias de la matriz y restarselo a la misma para centrar los datos y garantizar que el subespacio vectorial que va a encontrar la técnica contiene al vector nulo $\vec{0}$ como se muestra a continuación:
 	
 	$$
-	\begin{bmatrix}
-		z_1 & z_2 & z_3 \\
-		z_4 & z_5 & z_6 \\
-		z_7 & z_8 & z_9
-	\end{bmatrix}
+	 \begin{matrix}
+	 	X = \{x_1,x_2,\dots,x_n\} \\
+	 	 \bar{X} = \{\bar{x}_1,\bar{x}_2,\dots,\bar{x}_n\} \\
+	 	X_c = X-\bar{X}
+	 \end{matrix}
 	$$
+	Donde: 
+	\begin{itemize}
+		\item $X$ es la matriz de datos de tamaño $N\times P$.
+		\item $\bar{X}$ Es el vector de medias de tamaño $1\times P$.
+		\item $X_c$ Es la matriz de datos centrados en la media.
+	\end{itemize}
 	
-	Haciendo dichas simplificaciones, es posible obtener la derivada parcial en $x$ como sigue:
+	Una vez que se tiene la matriz centrada, se procede con el calculo de su matriz de varianzas y covarianzas como sigue:
 	
-	$$g_x = \frac{\partial f}{\partial x} = (z_7 + 2z_8 + z_9) - (z_1 + 2z_2 + z_3)$$	
+	$$S = \frac{1}{n-1} (X-\bar{X})' (X-\bar{X})$$
 	
-	Al visualizar los coeficientes como matriz, salta a la vista el objetivo el filtro, detectar los cambios en la derivada en la componente $x$:
-	
-	$$
-	\begin{bmatrix}
-		-1 & -2 & -1 \\
-		0 & 0 & 0 \\
-		1 & 2 & 1
-	\end{bmatrix}
-	$$
-	
-	
-	Por otro lado, se tiene la correspondiente operación para el calculo de la derivada parcial en $y$ como sigue:	
-	
-	$$g_y = \frac{\partial f}{\partial y} = (z_3 + 2z_6 + z_9) - (z_1 + 2z_4 + z_7)$$
+	Donde: 
+	\begin{itemize}
+		\item $X$ es la matriz de datos de tamaño $N\times P$.
+		\item $\bar{X}$ Es el vector de medias de tamaño $1\times P$.
+		\item $N$ Es la cantidad de observaciones en la matriz X.
+	\end{itemize}
 
-	\newpage
-	
-	Al visualizar los coeficientes como matriz, salta a la vista el objetivo el filtro, detectar los cambios en la derivada en la componente $y$:
-	
-	$$
-	\begin{bmatrix}
-		-1 & 0 & 1 \\
-		-2 & 0 & 2 \\
-		-1 & 0 & 1
-	\end{bmatrix}
-	$$
-	
-	Una vez que se cuentan con los elementos primarios se puede proceder con la construcción del gradiente. Cabe mencionar que el gradiente como tal, lo que hace es señalar la dirección de mayor cambio en la función en el punto $(x,y)$, por lo que se utiliza la norma del vector gradiente para conocer su norma.
-	
-	$$M(x, y) = ||\nabla f|| = \text{mag}(\nabla f) = \sqrt{G_x^2 + G_y^2}$$
-	
-	Finalmente, para calcular el angulo que se forma entre los vectores de las derivadas parciales $G_x$ y $G_y$ se utilizo la tangente inversa entre los vectores como se explica en \cite{perez2018procesamiento}:
-	
-	$$\theta(G_x,G_y) = \arctan(G_x,G_y )$$
-	
-	Se realizo la implementación en Julia por su simpleza y velocidad en el procesamiento de operaciones con matrices así como con matlab para el uso de la función quiver().
-	
-	Cabe mencionar que para el caso del procesamiento de las imagenes como matrices en Julia, fue necesario aplicar una normalización a los valores producidos por el operador de Sobel para que se encuentre en un rango entre 0 y 1. Dicha normalización para el caso de los resultados obtenidos para $G_x$, $G_y$ y $M(x,y)$ viene dada por:
-	
-	$$nomalizacion(M) = \frac{M-min(M)}{max(M)-min(M)}$$
-	
-	Donde $M$ es la matriz de valores resultantes para los 3 casos.
-	
-	Para el caso del angulo $\theta$ se aplico la normalización de forma distinta debido a que los valores  del angulo que devuelve Julia están dados en radianes:
-	
-	$$normalizacion(\theta) = \frac{\theta + \pi}{2 \pi}$$
-	
-	Por ultimo, se hizo uso de a función ya implementada en matlab $quiver()$ con las matrices de $G_x$ y $G_y$	obtenidas del proceso de aplicar el operador de Sobel.
+\newpage
+
+Una vez que se tiene lista la matriz de covarianzas, es necesario descomponerla en sus valores y vectores propios (eigen valores y eigen vectores) para encontrar el nuevo espacio donde proyectar los datos originales. Para esto se plantea la siguiente ecuación característica sobre la matriz de varianzas y covarianzas:
+
+$$Sv = \lambda v$$
+
+	Donde: 
+	\begin{itemize}
+		\item $S$ es la matriz de varianzas y covarianzas de los datos de tamaño $P\times P$.
+		\item $\lambda$ son los valores propios asociados a la matriz.
+		\item $v$ son los vectores propios asociados a la matriz .
+	\end{itemize}
+
+Haciendo un pequeño arreglo, se reescribe la ecuación y queda tal que así:
+
+$$
+\begin{matrix}
+Sv-\lambda v = 0 \\
+(S-\lambda I_P)v = 0	
+\end{matrix}
+$$
+
+Posterior a ello, se procede con la resolución del sistema de ecuaciones para hallar los valores propios ($\lambda$) y los vectores propios $v_i$ donde cabe recalcar que se pone la restricción de que las componentes al cuadrado del $i$-ésimo vector propio deben sumar 1.
+
+El resultado esperado son $P$ valores propios que indican cuanta varianza acumula cada una de las componentes en el nuevo sistema de coordenadas donde se van a proyectar los datos originales y $P$ vectores propios que serán los ejes sobre los cuales se proyecten los datos y construyan las nuevas componentes donde los datos proyectados tendrán la particularidad de ser incorrelacionados.
+
+Para hacer la proyección de los datos centrados en el nuevo sistema, basta con aplicar la siguiente operación matricial con los vectores propios encontrados:
+
+$$Z = X_cv$$
+
+Donde: 
+\begin{itemize}
+	\item $Z$ Son los componentes creados a partir de los datos centrados y los vectores propios.
+	\item $X_c$ Es la matriz de datos centrados de tamaño $N \times P$.
+	\item $v$ es la matriz de vectores propios de tamaño $P \times P$ .
+\end{itemize}
+
+Finalmente, se calcula la variabilidad explicada por cada componente mediante los valores propios como sigue:
+
+$$VE = 100*\frac{\lambda_i}{\sum_{i = 1}^P{\lambda_i}}$$
+
+Donde: 
+\begin{itemize}
+	\item $VE$ Es la variabilidad explicada por el $i$-ésimo valor propio.
+	\item $\lambda_i$ Es el $i$-ésimo valor propio.
+\end{itemize}
+
+Cabe mencionar que los valores propios conservan la siguiente propiedad:
+
+$$\lambda_1 \geq \lambda_2 \geq \dots \geq \lambda_P$$
+
+El primer valor propio es mayor o igual al segundo valor propio, el segundo es mayor o igual al tercer y así sucesivamente. El primer valor propio asociado a la primer componente siempre sera el que mayor variabilidad explique (asumiendo que están ordenados de mayor a menor, esto ya es tema de notación y en que orden se realicen las operaciones de matrices).
+
+A continuación se aplicara la PCA para reducir dimensionalidad sobre la base de datos de pingüinos palmer calculando el vector de medias, la matriz centrada, los valores propios, los vectores propios y realizando la visualización de los componentes en 2 y 3 dimensiones.
 	
 \newpage
 	
 \section{Resultados}
 
-A continuación se muestran los resultados obtenidos por la implementación en Julia y en matlab
+A continuación se muestran los resultados obtenidos para los datos de los pingüinos palmer en matlab.
 
-\subsection{Resultados para Gx}
+\subsection{Vector de medias}
 
-\begin{figure}[h]
-	
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q21.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Gx en Julia.}
-		\label{fig:img2}
-	\end{minipage}\hfill % \hfill para separar las imágenes horizontalmente
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q2.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Gx en Matlab.}
-		\label{fig:img3}
-	\end{minipage}
-	
-	\caption{Comparación en Gx.}
-	\label{fig:comparacion gx}
-\end{figure}		
+Se muestra el vector de medias obtenido para las variables de Longitud del pico, profundidad del pico, longitud de la aleta y la masa corporal:
 
-Se observa como ambos filtros logran detectar con mayor precisión los bordes que se generan en la curvatura del circulo que están en los extremos superiores e inferiores, dejando con una menor intensidad de detección la curvatura de los laterales y mostrando que el circulo presenta una pequeña deformidad en la parte inferior derecha.
+$$\bar{X} = \{43.92,\quad 17.15,\quad  200.91,\quad 4201.75\}$$
 
-Los resultados obtenidos entre ambas implementaciones son prácticamente el mismo.
+Se observa la evidente diferencia de las escalas entre las variables, siendo la masa corporal la que tiene valores más altos respecto al resto de variables.
 
-\newpage
+\subsection{Matriz de covarianzas}
 
-\subsection{Resultados para Gy}
+Aplicando la definición para la matriz de varianzas y covarianzas descrita previamente, se obtuvo la siguiente matriz:
 
-\begin{figure}[h]
-	
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q11.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Gy en Julia.}
-		\label{fig:img4}
-	\end{minipage}\hfill % \hfill para separar las imágenes horizontalmente
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q1.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Gx en Matlab.}
-		\label{fig:img5}
-	\end{minipage}
-	
-	\caption{Comparación en Gy.}
-	\label{fig:comparacion en gy}
-\end{figure}		
+$$
+S = 
+\begin{bmatrix}
+	29.807 & -2.534 & 50.376 & 2605.592 \\
+	-2.534 & 3.900 & -16.213 & -747.370 \\
+	50.376 & -16.213 & 197.732 & 9824.416 \\
+	2605.592 & -747.370 & 9824.416 & 643131.077 \\
+\end{bmatrix}
+$$
 
-Se observa como ambos filtros detectan mejor la curvatura de los laterales del circulo, dándole menos intensidad a la curvatura superior e inferior.
-
-Los resultados obtenidos entre ambas implementaciones son prácticamente el mismo.
+La matriz muestra que tanto están dispersas las variables entre ellas, llamando así la atención la variabilidad que existe para la masa corporal, es notorio el impacto que tiene la diferencia de escalas tan marcada entre las variables.
 
 \newpage
 
-\subsection{Resultados para el gradiente G}
+\subsection{Valores y vectores propios}
 
-\begin{figure}[h]
-	
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q31.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Gradiente en Julia.}
-		\label{fig:img6}
-	\end{minipage}\hfill % \hfill para separar las imágenes horizontalmente
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q3.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Gradiente en Matlab.}
-		\label{fig:img7}
-	\end{minipage}
-	
-	\caption{Comparación en G.}
-	\label{fig:comparacion en G}
-\end{figure}		
+Se procede a hacer el calculo de los valores y vectores propios en matlab, obteniéndose de forma ordenada en función de los valores propios los siguientes resultados así lo siguiente:
 
-Lo primero que salta a la vista es como al combinar la información obtenida de $G_x$ y de $G_y$ para el gradiente de la imagen, la imagen mejora bastante al punto que resalta unicamente lo que detecta como borde, que en ambos casos es la completitud de la curvatura del circulo, eliminando a su paso todo aquello que no es borde según el operador.
+$$\lambda = 
+\begin{bmatrix}
+	643292.600 &
+	51.545 &
+	16.036 &
+	2.343 
+\end{bmatrix}
+$$
 
-\newpage
+$$v = 
+\begin{bmatrix}
+	0.004 & -0.308 & 0.945 & -0.110 \\
+	-0.001 & 0.090 & 0.144 & 0.985 \\
+	0.015 & -0.947 & -0.294 & 0.130 \\
+	0.999 & 0.016 & 0.001 & -0.000 \\
+\end{bmatrix}
+$$
 
-\subsection{Resultados para el angulo del gradiente}
+Se observa como el valor asociado a la variable de masa corporal en el primer vector propio es el que tiene un mayor peso en la primer componente, siendo así mismo que la longitud de la aleta tiene mayor peso sobre la componente 2, la componente 3 se caracteriza porque su mayor peso recae en la variable de longitud del pico y la variable 4 indica que el mayor peso recae sobre la variable de la profundidad del pico.
 
-\begin{figure}[h]	
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q41.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Angulo del gradiente en Julia.}
-		\label{fig:img8}
-	\end{minipage}\hfill % \hfill para separar las imágenes horizontalmente
-	\begin{minipage}{0.48\textwidth} % Ajustamos el ancho para dejar un pequeño espacio entre las imágenes
-		\centering
-		\includegraphics[width=\textwidth]{IMG/q4.png} % Ajusta la ruta y el nombre del archivo
-		\caption{Angulo del gradiente en Matlab.}
-		\label{fig:img9}
-	\end{minipage}
-	
-	\caption{Comparación del Angulo del gradiente.}
-	\label{fig:comparacion en Gradiente}
-\end{figure}		
+Haciendo las cuentas, a continuación se muestra cuanta variabilidad explica cada componente:
 
-Se observa como la representación del angulo genera una imagen con lo que pareciera ser algún patrón de textura como si fuera tela estirada o papel aluminio doblado en donde resalta principalmente los bordes de la figura.
+$$VE = 
+\begin{bmatrix}
+	99.989 &
+	0.008 &
+	0.002 &
+	0.000 
+\end{bmatrix}
+$$
 
-El resultado de graficar el angulo de los gradientes $Gx$ y $Gy$ es prácticamente el mismo en ambos casos.
+
+
+Se observa como más del 99\% de la variabilidad explicada recae sobre el primer componente.
+
 
 \newpage
 
-\subsection{Resultados de la función quiver}
+\subsection{Proyección de las nuevas componentes}
 
-\begin{figure}[h]
+A continuación se muestra una pequeña fracción de los datos al ser proyectados sobre el nuevo sistema creado con ayuda de los vectores propios:
+
+\begin{figure}[h!]
 	\centering
-	\includegraphics[width=\textwidth]{IMG/quiver.png} % Ajusta la ruta y el nombre del archivo
-	\caption{Resultado de quiver sobre la imagen.}
-	\label{fig:img10}
-	\vspace{0.5cm} % Espacio vertical adicional entre las imágenes y la siguiente figura
-	\label{fig:Quiver}
+	\begin{minipage}{0.8\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{IMG/T2.png}
+		\caption{Base de datos centrada y proyectada sobre los vectores propios (primeros 5 casos).}
+		\label{fig:f4}
+	\end{minipage}\hfill
 \end{figure}
 
-El resultado de aplicar la función quiver en matlab da como resultado el mapeo de los bordes de la imagen con su representación como vectores (flechas). Salta a la vista que pese a que no se observan directamente los vectores, estos se encuentran acomodados alrededor del borde del circulo, formando a su vez el contorno de la figura.
+Se observa como los valores más grandes de los valores proyectados se encuentran entre las componentes 1 y 2.
+
+\newpage
+
+\subsection{Proyección en 1D}
+
+Debido al sorprendente resultado que indica que el 99\% de la variabilidad de los datos recae sobre la primer componente, se decidió probar a graficar la primer componente en un gráfico de puntos unidimensional. El resultado fue el siguiente:
+
+\begin{figure}[h!]
+	\centering
+	\begin{minipage}{1.1\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{IMG/G3.png}
+		\caption{Proyección en 1D sobre el componente 1.}
+		\label{fig:f5}
+	\end{minipage}\hfill
+\end{figure}
+
+El gráfico muestra la proyección de los datos en un espacio unidimensional, donde se observa que la mitad derecha esta mayormente representada por pingüinos de la especie Gentoo, mientras que la mitad izquierda presenta el problema del traslape entre clases. Pese a que la varianza explicada sea del 99\%, no se puede interpretar mucho a simple vista.
+
+\newpage
+
+\subsection{Proyección en 2D}
+
+\begin{figure}[h!]
+	\centering
+	\begin{minipage}{1.1\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{IMG/G4.png}
+		\caption{Proyección en 2D sobre el componente 1 y 2.}
+		\label{fig:f6}
+	\end{minipage}\hfill
+\end{figure}
+
+El resultado obtenido captura mejor la esencia de los datos y nos permite observar el fuerte traslape que existe entre la especie Adelie y Chinstrap en las nubes de puntos de los datos, existiendo también un ligero traslape de los Chinstrap con los gentoo.
+
+\newpage
+
+\subsection{Proyección en 3D}
+
+\begin{figure}[h!]
+	\centering
+	\begin{minipage}{1.1\textwidth}
+		\centering
+		\includegraphics[width=\textwidth]{IMG/G5.png}
+		\caption{Proyección en 3D sobre el componente 1, 2 y 3.}
+		\label{fig:f7}
+	\end{minipage}\hfill
+\end{figure}
+
+Al usar las primeras 3 componentes para proyectar los datos en un espacio de 3 dimensiones, se logra apreciar mejor la separación de los datos en 3 nubes de puntos que se encuentran mejor diferenciadas en comparación con las representaciones anteriores, aquí se observa un menor traslape entre las clases problemáticas de Adelie y Chinstrap. 
 
 
 \newpage
 	
 \section{Conclusiones}
 	
-Tras la implementación del algoritmo en ambos lenguajes de programación, se observo como no difieren prácticamente en nada los resultados de las implementaciones entre ambos lenguajes, esto se debe a que en esencia, están computando lo mismo ambos lenguajes. \\
+Después de realizar el ejercicio de explorar una base de datos y aplicarle PCA para poder proyectar su información concentrada en un espacio de menor dimensionalidad, se pudo observar como el PCA mejora sustancialmente la representación de los datos al poder comprimir las variables en un espacio de menor dimensionalidad sin perder apenas información.
 
-Por otro lado, los resultados obtenidos por el operador de sobel resultan impresionantes debido a la precisión con la que logra extraer el borde de la imagen y eliminar todo lo que no representa un borde para el operador. \\
+La técnica es eficaz, relativamente simple y bastante potente, aunque presenta algunas debilidades. Una de las principales es su sensibilidad a la escala de las variables. Como se observó en el ejercicio, la variable masa corporal, que tenía los valores más grandes, resultó ser la que más aportó a la primera componente principal. Esto se debe a que, al tener mayor variabilidad absoluta, influye más en el cálculo de los valores propios, lo que provoca que se le atribuya una mayor capacidad explicativa. Para enfrentar este tipo de situaciones, se recomienda estandarizar los datos mediante una transformación $Z$, o bien utilizar la matriz de correlaciones en lugar de la matriz de covarianzas.
 
-Finalmente, cabe mencionar que ya sea que se haga en un lenguaje u otro, es necesario tomar en cuenta la forma en que se hacen los cálculos internamente de las convolusiones, debido a que a medida que se pueda procesar una gran serie de imágenes o de altas resoluciones, la cantidad de operaciones que debe realizar el algoritmo aumenta rápidamente por lo que implicaría un mayor coste de tiempo y recurso computacional.
+El otro problema que acarrea consigo el PCA es la posibilidad de que la matriz de varianzas y covarianzas o la de correlaciones (cualquiera que se este usando) tenga la particularidad de ser NO invertible, por lo que ahí la técnica ya no es posible aplicarla.
+
+Más allá de estos problemas, la técnica probo ser buena para mejorar la visualización de los datos para este caso de aplicación.
 
 \newpage
 
@@ -331,206 +361,119 @@ Finalmente, cabe mencionar que ya sea que se haga en un lenguaje u otro, es nece
 \newpage
 	
 \section{Anexos}	
-\subsection{Implementación de la ecualización por histograma}
-\begin{minted}[linenos,firstnumber=1]{julia}
-#### Paquetes necesarios ####
-using Plots
-using Images
-using StatsBase
-
-# Función del gradiente de SOBEL #
-function imsobel(img_ruta::String)
-	# Cargar la imagen
-	img = load(img_ruta)
-	# Convertir la imagen a escala de grises y multiplicar por 255
-	img1 = Gray.(img) .* 255
-	# Generar la matriz que detecta en Gx
-	gxk = [-1 0 1; -2 0 2; -1 0 1]
-	# Generar la matriz que detecta en Gy
-	gyk = gxk' # Usamos la transpuesta de gxk
-	# Obtener las dimensiones de la imagen y el kernel
-	imdim = size(img1)
-	kerdim = size(gxk)
-	# Calcular las dimensiones de la imagen resultante
-	rf = imdim[1] - kerdim[1] + 1
-	rc = imdim[2] - kerdim[2] + 1
-	# Crear un array para guardar los resultados
-	resultado = zeros(rf, rc, 4)
-	# Aplicar la convolución
-	for i in 1:rf
-		for j in 1:rc
-			# Extraer una submatriz de nxn de la imagen
-			subim = img1[i:i+kerdim[1]-1, j:j+kerdim[2]-1]
-			
-			# Aplicar la convolución sobre GX
-			resultado[i, j, 1] = sum(subim .* gxk)
-			
-			# Aplicar la convolución sobre GY
-			resultado[i, j, 2] = sum(subim .* gyk)
-			
-			# Calcular el operador de Sobel
-			sobel = sqrt(resultado[i, j, 1]^2 + resultado[i, j, 2]^2)
-			
-			# Guardar el valor del gradiente
-			resultado[i, j, 3] = sobel
-		end
-	end
-	#### Reportar las salidas ####
-	# Reportar Gx
-	rgx = resultado[:, :, 1]
-	# Estandarizar
-	minr = minimum(rgx)
-	maxr = maximum(rgx)
-	p1 = (rgx .- minr) ./ (maxr - minr)
-	q1 = 1 .- p1
-	# Reportar Gy
-	rgy = resultado[:, :, 2]
-	# Estandarizar
-	minr = minimum(rgy)
-	maxr = maximum(rgy)
-	p2 = (rgy .- minr) ./ (maxr - minr)
-	q2 = 1 .- p2
-	# Reportar Sobel
-	rg = resultado[:, :, 3]
-	# Estandarizar
-	minr = minimum(rg)
-	maxr = maximum(rg)
-	p3 = (rg .- minr) ./ (maxr - minr)
-	q3 = 1 .- p3
-	# Operador de la dirección
-	resultado[:, :, 4] = atan.(resultado[:, :, 2], resultado[:, :, 1])
-	q4 = resultado[:, :, 4] 
-	# Normalizar el ángulo a [0, 1]
-	q4 = (q4 .+ pi) ./ (2 * pi)
-	# Exportar salidas
-	return Gray.(q1), Gray.(q2), Gray.(q3), Gray.(q4)
-end
-
-# Obtener resultados #
-# Ejemplo de uso
-ruta = "Fig3.45(a).jpg"
-q1, q2, q3, q4 = imsobel(ruta)
-# Puedes guardar las imágenes o mostrarlas usando imshow
-save("q1.png", q1)
-save("q2.png", q2)
-save("q3.png", q3)
-save("q4.png", q4)
-\end{minted}
-
-	
-\newpage
-
-\subsection{Implementación del operador de Sobel en Matlab}
-
+\subsection{Implementación de la exploración y el PCA en MATLAB}
 \begin{minted}[linenos,firstnumber=1]{matlab}
-function [q1, q2, q3, q4, Gx, Gy] = imsobel(img_ruta)
-	% Cargar la imagen
-	img = imread(img_ruta);
-	% Convertir la imagen a escala de grises y a double
-	if size(img, 3) == 3
-	img1 = double(rgb2gray(img));
-	else
-	img1 = double(img);
-	end
-	
-	% Generar la matriz que detecta en Gx
-	gxk = [-1 0 1; -2 0 2; -1 0 1];
-	
-	% Generar la matriz que detecta en Gy
-	gyk = gxk'; % Usamos la transpuesta de gxk
-	
-	% Obtener las dimensiones de la imagen y el kernel
-	[imdim_rows, imdim_cols] = size(img1);
-	[kerdim_rows, kerdim_cols] = size(gxk);
-	
-	% Calcular las dimensiones de la imagen resultante
-	rf = imdim_rows - kerdim_rows + 1;
-	rc = imdim_cols - kerdim_cols + 1;
-	
-	% Crear un array para guardar los resultados
-	resultado = zeros(rf, rc, 4);
-	
-	% Aplicar la convolución
-	for i = 1:rf
-		for j = 1:rc
-		% Extraer una submatriz de nxn de la imagen
-		subim = img1(i:i+kerdim_rows-1, j:j+kerdim_cols-1);
-		
-		% Aplicar la convolución sobre GX
-		resultado(i, j, 1) = sum(subim .* gxk, 'all');
-		
-		% Aplicar la convolución sobre GY
-		resultado(i, j, 2) = sum(subim .* gyk, 'all');
-		
-		% Calcular el operador de Sobel
-		sobel = sqrt(resultado(i, j, 1)^2 + resultado(i, j, 2)^2);
-		
-		% Guardar el valor del gradiente
-		resultado(i, j, 3) = sobel;
-		end
-	end
-	
-	% Operador de la dirección
-	resultado(:,:,4) = atan2(resultado(:,:,2), resultado(:,:,1));
-	
-	% Reportar Gx
-	Gx = resultado(:,:,1);
-	% Estandarizar
-	minr = min(Gx(:));
-	maxr = max(Gx(:));
-	p1 = (Gx - minr) / (maxr - minr);
-	q1 = 1 - p1;
-	
-	% Reportar Gy
-	Gy = resultado(:,:,2);
-	% Estandarizar
-	minr = min(Gy(:));
-	maxr = max(Gy(:));
-	p2 = (Gy - minr) / (maxr - minr);
-	q2 = 1 - p2;
-	
-	% Reportar Sobel
-	rg = resultado(:,:,3);
-	% Estandarizar
-	minr = min(rg(:));
-	maxr = max(rg(:));
-	p3 = (rg - minr) / (maxr - minr);
-	q3 = 1 - p3;
-	
-	% Operador de la dirección
-	q4 = resultado(:,:,4);
-	% Normalizar el ángulo a [0, 1]
-	q4 = (q4 + pi) / (2 * pi);
-	
-	% Mostrar y guardar los vectores de flujo óptico
-	figure;
-	quiver(Gx, -Gy); % Se invierte Gy para la visualización correcta
-	title('Vectores de flujo óptico (quiver)');
-	saveas(gcf, 'quiver.png'); % Guardar la figura en la carpeta actual
-	
-	% Exportar salidas
-	q1 = uint8(q1 * 255);
-	q2 = uint8(q2 * 255);
-	q3 = uint8(q3 * 255);
-	q4 = q4; % q4 ya está normalizado a [0, 1]
-	
-	% Guardar las imágenes resultantes en la carpeta actual
-	imwrite(q1, 'q1.png');
-	imwrite(q2, 'q2.png');
-	imwrite(q3, 'q3.png');
-	imwrite(q4, 'q4.png');
-end
+%% Cargar la base de datos en formato CSV %%
+ruta = "penguins.csv";
+datos = readtable(ruta); % Leer el archivo CSV en una tabla
+size(datos); % Ver el tamaño de los datos
 
-% Ejemplo de uso
-img_ruta = 'Fig3.45(a).jpg';
-[q1, q2, q3, q4, Gx, Gy] = imsobel(img_ruta);
+% 1 etiqueta de clasificación (Species)
+% 3 características categóricas (Isla, sexo y año de observación)
+% 4 variables continuas: bill length, bill depth, fliper y bodymass
+
+% Filtrar solo las columnas numéricas y eliminar filas con datos faltantes
+indices = find(any(isnan(datos{:, 4:7}), 2)); % Buscar filas con valores NaN en las columnas 4 a 7
+datos1 = datos;
+datos1(indices, :) = []; % Eliminar esas filas
+
+% Extraer las variables numéricas y la especie para el gráfico
+% Extraer las variables numéricas y la especie para el gráfico
+especie = datos1.species; % Columna 'species' con las etiquetas de especies
+% Convertir la columna 'especie' en un vector de tipo categorical
+especie = categorical(especie); % Convertir a tipo categorical, que gscatter entiende
+datos1 = table2array(datos1(:, 4:7)); % Convertir las columnas 4 a 7 a un arreglo numérico
+
+%% Gráficos descriptivos %%
+% Graficar el gráfico de dispersión usando gscatter
+% Longitud del pico y ancho del pico
+subplot(2,2,1)
+gscatter(datos1(:,1), datos1(:,2), especie,"filled"); 
+xlabel('Longitud del pico'); % Etiqueta del eje x
+ylabel('Profundidad del pico'); % Etiqueta del eje y
+title('G1'); % Título del gráfico
+
+% Longitud del pico y longitud de la aleta %
+subplot(2,2,2)
+gscatter(datos1(:,1), datos1(:,3), especie,"filled");
+xlabel('Longitud del pico'); % Etiqueta del eje x
+ylabel('Longitud de la aleta'); % Etiqueta del eje y
+title('G2'); % Título del gráfico
+% Longitud del pico y masa corporal
+subplot(2,2,3)
+gscatter(datos1(:,1), datos1(:,4), especie,"filled");
+xlabel('Longitud del pico'); % Etiqueta del eje x
+ylabel('Masa corporal'); % Etiqueta del eje y
+title('G3'); % Título del gráfico
+% Ancho del pico y Longitud de la aleta
+subplot(2,2,4)
+gscatter(datos1(:,2), datos1(:,3), especie,"filled");
+xlabel('Profundidad del pico'); % Etiqueta del eje x
+ylabel('Longitud de la aleta'); % Etiqueta del eje y
+title('G4'); % Título del gráfico
+
+%% Exploración en 3D %&
+% Crear un gráfico 3D
+subplot(1,2,1)
+scatter3(datos1(:,1), datos1(:,2), datos1(:,3), 50, especie, 'filled'); 
+% Ajustar etiquetas y título
+xlabel('Longitud del pico');
+ylabel('Profundidad del pico');
+zlabel('Longitud del aletín');
+title('');
+
+subplot(1,2,2)
+scatter3(datos1(:,2), datos1(:,3), datos1(:,4), 50, especie, 'filled'); 
+% Ajustar etiquetas y título
+xlabel('Profundidad del pico');
+ylabel('Largo de la aleta');
+zlabel('Masa corporal');
+title('');
+% Mostrar la leyenda de colores
+% Guardar como archivo PNG
+
+%% HACER EL PCA %%
+
+% Obtener la media de los datos
+%% Cambio de coordenadas %%
+medias = mean(datos1)
+cdatos = datos1 - medias % Centrar en la media
 
 
-% Mostrar las imágenes resultantes
-figure; imshow(q1); title('q1 (1 - Gx)');
-figure; imshow(q2); title('q2 (1 - Gy)');
-figure; imshow(q3); title('q3 (1 - Sobel)');
-figure; imshow(q4); title('q4 (Dirección)')
+% Calculo de la covarianza %
+n = size(datos1);
+Si = (cdatos'*cdatos)/(n(1)-1)
+
+%% Calcular los eigen valores %%
+[V, D] = eig(Si)
+
+100*diag(D)/sum(diag(D))
+
+%% Calcular los scores %%
+%% Calcular los scores %%
+NB = cdatos * V; % Proyección de los datos
+
+% Crear una dispersión en 1D (todos los puntos con la misma Y)
+y = zeros(size(NB, 1), 1); % Todos los puntos en Y=0
+gscatter(NB(:,4), y, especie, 'rgb', '.', 15);
+xlabel('Componente 1');
+yticks([]); % Eliminar marcas del eje Y
+ylabel('');
+title('Proyección 1D sobre el componente 1');
+
+%% Gráfico en 2d con la primer y segunda componente %%
+gscatter(NB(:,4), NB(:,3), especie,"filled");
+xlabel('Componente 1'); % Etiqueta del eje x
+ylabel('Componente 2'); % Etiqueta del eje y
+title(''); % Título del gráfico
+
+%% Crear un gráfico 3D %%
+scatter3(NB(:,4), NB(:,3), NB(:,2), 50, especie, 'filled'); 
+% Ajustar etiquetas y título
+xlabel('Componente 1');
+ylabel('Componente 2');
+zlabel('Componente 3');
+title('');
 \end{minted}
 	
 	
