--- a/LOGICA DIFUSA/TAREA 6/REPORTE/TAREA 6.tex
+++ b/LOGICA DIFUSA/TAREA 6/REPORTE/TAREA 6.tex
@@ -74,11 +74,6 @@ En la tarea 1, se hizo la labor de probar con distintas combinaciones de funcion
 
 A continuación se listan los valores de las variables lingüísticas que se propusieron para SERVICIO, COMIDA y PROPINA como sigue:
 
-MF1='Malo':'trimf',[0 0 5]
-MF2='Regular':'trimf',[0.8333 5 9.167]
-MF3='Bueno':'trimf',[4 10 10]
-
-
 \begin{enumerate}
 	\item Servicio: Malo $[0,0,5]$, Regular $[0.8333,5,9.167]$ y Bueno $[4,10,10]$.
 	\begin{figure}[h]
@@ -162,7 +157,7 @@ Como se menciono en un inicio, el principal objetivo de esta actividad aparte de
 
 El primer paso  identificar las variables de discurso SERVICIO, COMIDA y PROPINA para inicializarlas en 0.\\
 
-Con referencia a lo explicado en el libro de \cite{Cisneros2004}, se implemento la función de membresía tiangular tal y como la define a continuación:
+Con referencia a lo explicado en el libro de \cite{Cisneros2004}, se implemento la función de membresía triangular tal y como la define a continuación:
 
 $$
 \mu_A(x) = 
@@ -250,7 +245,7 @@ A la izquierda se muestran los resultados del toolbox y a la derecha el resultad
 \newpage
 
 \subsubsection{Caso medio}
-Para el caso mínimo, se propone un $SERVICIO = 5$ y una $COMIDA = 50$ para ver como se comportan ambas versiones ante situación media.
+Para el caso medio, se propone un $SERVICIO = 5$ y una $COMIDA = 50$ para ver como se comportan ambas versiones ante situación media.
 
 \begin{figure}[h]
 	\centering
@@ -273,7 +268,7 @@ A la izquierda se muestran los resultados del toolbox y a la derecha el resultad
 \newpage
 
 \subsubsection{Caso máximo}
-Para el caso mínimo, se propone un $SERVICIO = 10$ y una $COMIDA = 100$ para ver como se comportan ambas versiones ante situaciones tan extremas.
+Para el caso máximo, se propone un $SERVICIO = 10$ y una $COMIDA = 100$ para ver como se comportan ambas versiones ante situaciones tan extremas.
 
 \begin{figure}[h]
 	\centering
@@ -296,7 +291,7 @@ A la izquierda se muestran los resultados del toolbox y a la derecha el resultad
 
 \section{Conclusiones}
 
-A rasgos generales, los resultados del sistema programado paso a paso y del toolbox de matlab resultan practicamente iguales, almenos en los casos donde se hizo la comparación.
+A rasgos generales, los resultados del sistema programado paso a paso y del toolbox de matlab resultan prácticamente iguales en los casos donde se hizo la comparación.
 
 Si bien, no se esta explotando al máximo las bondades del método de Sugeno, como lo es generar salidas a partir de polinomios de grado 1, el método arroja mejores resultados que los encontrados por el método de Mandami de la tarea 2.
 
